# forecast-2-0-pipeline

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  doc_finale  doc_finale.md  docker-compose.local.yml  docker-compose.yml  env.example  pyproject.toml  requirements.txt  test.ipynb
docker/mongo-init/: 10-create-app-user.js
docker/mongodb-rs/: Dockerfile  entrypoint.sh
docs/: airbyte_setup_s3.md  audit_complet_2026-02-18.md  audit_ecs_only_2026-02-18.md  deployment_mongodb_atlas.md  deployment_mongodb_ecs.md  mongodb_migration.md  presentation_slides.md  presentation_slides.pptx  presentation_support.md  process_flowchart.mmd
infra/terraform/mongodb-ecs/: .terraform.lock.hcl  README.md  backend.hcl.example  main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  tfplan  variables.tf  versions.tf
ops/: README.md
ops/aws/: build_push_mongodb_rs_image.sh  create_mongo_app_user.sh  deploy_mongodb_rs_terraform.sh
scripts/: cron-run-pipeline.sh
src/: main.py
src/config/: mongodb_schema.json  pipeline_config.json  stations_metadata.json
src/loaders/: mongodb_loader.py  s3_loader.py
src/pipeline/extractors/: infoclimat_extractor.py  wunderground_extractor.py
src/pipeline/transformers/: data_harmonizer.py  data_validator.py  quality_checker.py
src/scripts/: __init__.py  migrate_to_mongodb.py  mongodb_crud.py  query_latency_report.py  transform_to_mongodb.py
src/tests/: conftest.py  test_harmonizer.py  test_integration.py  test_pipeline_local.py  test_transformers.py
src/utils/: __init__.py  logger.py  monitoring.py
